Sema: Ensure Equatable conformance is forced for key path indices.

We need to ensure that the conformance is fully reified during type checking since we will use it during SILGen for the keypath. Speculative fix for SR-7207.